--- a/tutorial/01_AttenationCoefficient/01_Analysis_AttenuationCoefficient.ipynb
+++ b/tutorial/01_AttenationCoefficient/01_Analysis_AttenuationCoefficient.ipynb
@@ -40,10 +40,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "fb3a75bd",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/kaestner/lectures/QuantifyingNeutronImages/tutorial/01_AttenationCoefficient/../00_Common/amglib/imageutils.py:8: FutureWarning: Importing from skimage.morphology.greyreconstruct is deprecated. Please import from skimage.morphology instead.\n",
+      "  import skimage.morphology.greyreconstruct as rec\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -52,7 +61,7 @@
     "\n",
     "if \"google.colab\" in sys.modules:\n",
     "    # Running on colab we need to download repos from github\n",
-    "    !git clone https://github.com/ImagingELearning/QuantifyNeutronImages.git\n",
+    "    !git clone https://github.com/ImagingELearning/QuantifyingNeutronImages.git\n",
     "    !git clone https://github.com/neutronimaging/scripts.git\n",
     "    data_path=\"/content/WaterInSand/tutorials/00_common/data\"\n",
     "    sys.path.append(\"/content/scripts/python\")\n",
