More path fixing

--- a/tutorial/01_AttenationCoefficient/01_Analysis_AttenuationCoefficient.ipynb
+++ b/tutorial/01_AttenationCoefficient/01_Analysis_AttenuationCoefficient.ipynb
@@ -40,19 +40,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "fb3a75bd",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/kaestner/lectures/QuantifyingNeutronImages/tutorial/01_AttenationCoefficient/../00_Common/amglib/imageutils.py:8: FutureWarning: Importing from skimage.morphology.greyreconstruct is deprecated. Please import from skimage.morphology instead.\n",
-      "  import skimage.morphology.greyreconstruct as rec\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
@@ -63,11 +54,11 @@
     "    # Running on colab we need to download repos from github\n",
     "    !git clone https://github.com/ImagingELearning/QuantifyingNeutronImages.git\n",
     "    !git clone https://github.com/neutronimaging/scripts.git\n",
-    "    data_path=\"/content/QuantifyingNeutronImages/tutorials/00_common/data\"\n",
+    "    data_path=\"/content/QuantifyingNeutronImages/tutorials/00_Common/data\"\n",
     "    sys.path.append(\"/content/scripts/python\")\n",
     "else: \n",
     "    # Running locally on your computer\n",
-    "    data_path = \"../00_common/data/\"\n",
+    "    data_path = \"../00_Common/data/\"\n",
     "\n",
     "import sys\n",
     "sys.path.append('../00_Common/')\n",
