More colab path stuff

--- a/tutorial/01_AttenationCoefficient/01_Analysis_AttenuationCoefficient.ipynb
+++ b/tutorial/01_AttenationCoefficient/01_Analysis_AttenuationCoefficient.ipynb
@@ -52,9 +52,11 @@
     "\n",
     "if \"google.colab\" in sys.modules:\n",
     "    # Running on colab we need to download repos from github\n",
+    "    !rm -rf scripts\n",
+    "    !rm -rf QuantifyingNeutronImages\n",
     "    !git clone https://github.com/ImagingELearning/QuantifyingNeutronImages.git\n",
     "    !git clone https://github.com/neutronimaging/scripts.git\n",
-    "    data_path=\"/content/QuantifyingNeutronImages/tutorials/00_Common/data\"\n",
+    "    data_path=\"/content/QuantifyingNeutronImages/tutorials/00_Common/data/\"\n",
     "    sys.path.append(\"/content/scripts/python\")\n",
     "else: \n",
     "    # Running locally on your computer\n",
