--- a/tutorials/01_AttenationCoefficient/01_Analysis_AttenuationCoefficient.ipynb
+++ b/tutorials/01_AttenationCoefficient/01_Analysis_AttenuationCoefficient.ipynb
@@ -22,12 +22,7 @@
     "- Understanding how the water content can be quantified from images.\n",
     "    - Normalization\n",
     "    - Correcting for scattering\n",
-    "    - Estimating the attenation coefficient of water (video demonstration).\n",
-    "- Planning a real time imaging experiment.\n",
-    "    - Finding pixel size and exposure time.\n",
-    "- Detecting the position of a water front in a time series.\n",
-    "    - Performing a capillary rise experiment (video demonstrations).\n",
-    "    - Reduction"
+    "    - Estimating the attenation coefficient of water (video demonstration)."
    ]
   },
   {
