--- a/tutorials/02_RadiographyTimeSeries/02_Analysis_CapillaryRise.ipynb
+++ b/tutorials/02_RadiographyTimeSeries/02_Analysis_CapillaryRise.ipynb
@@ -8,7 +8,7 @@
     "# Quantifying capillary rise using neutron radiography\n",
     "Anders Kaestner, Laboratory for Neutron Scattering and Imaging, Paul Scherrer Institut, 2022\n",
     "\n",
-    "<img src='../00_common/figures/by-nc-nd.svg' style='height:30px'/>"
+    "<img src='figures/by-nc-nd.svg' style='height:30px'/>"
    ]
   },
   {
