Added solution to capillary rise

--- a/tutorials/01_AttenationCoefficient/01_Analysis_AttenuationCoefficient.ipynb
+++ b/tutorials/01_AttenationCoefficient/01_Analysis_AttenuationCoefficient.ipynb
@@ -5,7 +5,7 @@
    "id": "602b1ed5",
    "metadata": {},
    "source": [
-    "<img src='../00_common/figures/iaeaheader.svg' style='width:100%'/>\n",
+    "<img src='figures/iaeaheader.svg' style='width:100%'/>\n",
     "<p style=\"font-size:2em;padding-bottom: 0.5em; font-weight: bold;\">\n",
     "<em>E-learning course on <br / ><br / >\n",
     "Advanced Neutron Imaging</em>\n",
@@ -14,7 +14,7 @@
     "# Measuring the neutron attenuation coefficient of water\n",
     "Anders Kaestner, Laboratory for Neutron Scattering and Imaging, Paul Scherrer Institut, 2023\n",
     "\n",
-    "<img src='../00_common/figures/by-nc-nd.svg' style='height:30px'/>"
+    "<img src='figures/by-nc-nd.svg' style='height:30px'/>"
    ]
   },
   {
@@ -873,7 +873,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.9.13"
   },
   "varInspector": {
    "cols": {
