--- a/tutorials/02_RadiographyTimeSeries/02_Analysis_CapillaryRise.ipynb
+++ b/tutorials/02_RadiographyTimeSeries/02_Analysis_CapillaryRise.ipynb
@@ -5,10 +5,32 @@
    "id": "f203e860",
    "metadata": {},
    "source": [
+    "<img src='figures/iaeaheader.svg' style='width:100%'/>\n",
+    "<p style=\"font-size:2em;padding-bottom: 0.5em; font-weight: bold;\">\n",
+    "<em>E-learning course on <br / ><br / >\n",
+    "Advanced Neutron Imaging</em>\n",
+    "</p> \n",
+    "\n",
     "# Quantifying capillary rise using neutron radiography\n",
-    "Anders Kaestner, Laboratory for Neutron Scattering and Imaging, Paul Scherrer Institut, 2022\n",
+    "Anders Kaestner, Laboratory for Neutron Scattering and Imaging, Paul Scherrer Institut, 2023\n",
     "\n",
     "<img src='figures/by-nc-nd.svg' style='height:30px'/>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "590e632f",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-05-30T08:36:09.224970Z",
+     "start_time": "2023-05-30T08:36:09.220426Z"
+    }
+   },
+   "source": [
+    "## Introduction\n",
+    "Neutron imaging is used for many porous media experiments due to the great capacity of detecting small amounts of water in the solid matrix. In this tutorial we will look into the concept of [capillary rise in a porous sample](https://en.wikipedia.org/wiki/Capillary_action). This is when the sample suck up water into the sample by means of the capillary forces. The process can easily be observed using a time series of neutron radiographs. In the simple case with homogeneous samples this could also be observed by looking at the sample, but more complicated and heterogeneous samples require imaging for the full understanding. \n",
+    "\n",
+    "In [Cramer et al. 2023](https://doi.org/10.1002/vzj2.20215) the concept of capillary rise was used to study the water repellency caused by micro plastics.\n"
    ]
   },
   {
@@ -327,7 +349,7 @@
     "|---|---|---|\n",
     "| Surcafe tension |$\\gamma$ |72 × 10−3N/m |\n",
     "| Dynamic viscosity |$\\eta$ | 8.9 × 10−4Ps |\n",
-    "|Wetting angle | $\\phi$| 50$^{\\circ} |\n",
+    "|Wetting angle | $\\phi$| 50$^{\\circ}$ |\n",
     "\n",
     "Rearrange the equation and calculate the pore radius."
    ]
